--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0",
+    "@toast-ui/react-editor": "^3.1.3",
     "axios": "^0.26.1",
+    "prismjs": "^1.27.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
