--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "prismjs": "^1.27.0",
     "react": "^18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
