--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.0.0",
     "@toast-ui/react-editor": "^3.1.3",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "prismjs": "^1.27.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -20,7 +21,7 @@
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
-    "build": "node --max_old_space_size=8192 node_modules/.bin/react-scripts start --progress --env.prod",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
