--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,11 @@
     "prismjs": "^1.27.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-markdown": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
